unpackaged/main/default/objects/WishlistItem__c/WishlistItem__c.object-meta.xml
<CustomObject>
    <label>Wishlist Item</label>
    <nameField>
        <displayFormat>WI-{0000000}</displayFormat>
        <label>WishlistItem Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wishlist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>