unpackaged/main/default/objects/WishlistItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Catalog_Product__c</referenceTo>
    <relationshipLabel>Wishlist Items</relationshipLabel>
    <relationshipName>Wishlist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>