unpackaged/main/default/objects/WishlistItem__c/fields/removedItem__c.field-meta.xml
<CustomField>
    <fullName>removedItem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>keep track of deleted items =&gt; instead of deleting the item of the wishlit when the user delete this item from the app, this checbox turns to true and we don&#39;t send it to the app anymore</description>
    <label>removedItem</label>
    <type>Checkbox</type>
</CustomField>