unpackaged/main/default/objects/WishlistItem__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Wishlist Items</relationshipLabel>
    <relationshipName>Wishlist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>