unpackaged/main/default/objects/WishlistItem__c/fields/TECH_uniqueKey__c.field-meta.xml
<CustomField>
    <fullName>TECH_uniqueKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>TECH_uniqueKey</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>